--- a/languages/bea-scm-fr_FR.po
+++ b/languages/bea-scm-fr_FR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Last-Translator: Be API <technique@beapi.fr>\n"
 "Language-Team: Be API <technique@beapi.fr>\n"
 "MIME-Version: 1.0\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.8.7.1\n"
 "Language: fr_FR\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
@@ -75,3 +75,8 @@ msgstr "Dernière modification"
 #: bea-scm-infos/classes/main.php
 msgid "GIT is on %s - %s"
 msgstr "GIT actuellement sur %s - %s"
+
+#. Text in echo
+#: bea-scm-infos/classes/main.php
+msgid "GIT error - click me to see what happened"
+msgstr "Erreur GIT - cliquez ici pour savoir ce qui s'est passé"
