--- a/languages/bea-scm-fr_FR.po
+++ b/languages/bea-scm-fr_FR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Last-Translator: Be API <technique@beapi.fr>\n"
 "Language-Team: Be API <technique@beapi.fr>\n"
 "MIME-Version: 1.0\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.0.4\n"
 "Language: fr_FR\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
@@ -24,12 +24,10 @@ msgstr "Les informations sont mises en cache pendant 1 minute !"
 
 #. Text in echo
 #: bea-scm-infos/classes/main.php
-msgid ""
-"There is no infos to display, please choose one of the versionning system "
-"please."
+msgid "There is no infos to display, please choose one of the versionning system please."
 msgstr ""
-"Il n'y a aucune information à afficher, SVP choisissez un des systèmes de "
-"versionning ci-dessus."
+"Il n'y a aucune information à afficher, SVP choisissez un des systèmes de versionning "
+"ci-dessus."
 
 #. Text in echo
 #: bea-scm-infos/views/scm-infos.php
